Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1695

Hardcoded NULL fails assertion

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.7.0
    • xml/om, xml/parser
    • None

    Description

      axiom_soap_header_examine_all_header_blocks calls axiom_element_get_children_with_qname using a hardcoded NULL for the qname, causing an assertion failure (qname != null).

      One or the other needs to be adjusted to make it work.

      Attachments

        Activity

          People

            Unassigned Unassigned
            billblough Bill Blough
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: