Remove conflicting assertion

Jira: AXIS2C-1695